Practice submit page nearly done Subject This is the last commit as the Practice will reamin unfinish Problem Cannot remeber how to do password validation, but I am stalled Solution Move on for now Note There were some problems encounterd in making the photo work with the logo and then with the form no how to use focus to change the outline Theese issues were resolved and could not finish the password validation part it would take too long to relearn and I am already stalled.

--- a/style.css
+++ b/style.css
@@ -1,4 +1,92 @@
-div{
-    border-style: solid;
-    
+
+body, html{
+    padding:0%;
+    margin: 0px;
+    height: 100%;
+    background-color: darkred
 }
+
+.container1{
+    border-style: solid;
+    border-color: goldenrod;
+    background-color: blanchedalmond;
+
+    display: flex;
+
+    height: 100%;
+
+    margin:  0 10% 5%;
+    padding: 0px;
+}
+
+img{
+    max-width: 75px;
+}
+
+il{
+    font-size: medium;
+}
+
+.picture{
+    background-image: url('jp-files-8KhL4DAM6rk-unsplash.jpg');
+    background-size: 100%;
+    /* max-height: 300px; */
+}
+
+@font-face {
+    font-family: 'MySpanishCali';
+    src: url('myfont.woff') format('woff'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+         url('StylishCalligraphyDemo-XPZZ.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+}  
+
+h2{
+    font-family: MySpanishCali;
+}
+
+.picture, .check{
+    flex: 3 1 100%;
+ 
+}
+
+.check{
+    padding: 7.5%;
+    align-self: center;
+    font-size: xx-large;
+}
+
+form{
+    font-size: medium;
+    color: maroon;
+    display: flex;
+    justify-content: space-between;
+    padding: 3%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex: 1 1 45%;
+    max-width: 60%;
+}
+
+
+input,label{
+    margin: 3px;
+}
+
+button{
+    background-color: brown;
+    color: goldenrod;
+    font-size: large;
+    margin: 3px;
+    border-radius: 5px;
+    border-style: none;
+    padding: 7px;
+}
+
+input:focus{
+    outline: none !important;
+    background-color: beige;
+    border: 4px solid goldenrod !important;
+    box-shadow: maroon;
+    border-radius: 5px;
+}
+
+
